--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,33 +1,70 @@
+$footerHeight: 180px;
+#__docusaurus {
+    height: 100%;
+    font-family: 'Aref Ruqaa';
+}
+
+.navbar {
+    &.showHeader {
+        // background-color: #fff;
+        // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+        display: block;
+    }
+    &.hideHeader {
+        width: 100%;
+        position: fixed;
+        background: transparent;
+        box-shadow: none;
+        display: none;
+    }
+    .navbar__title {
+        font-family: "Petit Formal Script";
+    }
+}
+
+.main-wrapper {
+    min-height: calc(100vh + 350px);
+}
+
+[data-theme='dark'] .whiteHeader {
+    background-color: #000;
+}
+
 .hero {
     width: 100%;
-    padding-bottom: 28%;
+    height: 100vh;
+    min-height: 660px;
     max-height: 100%;
+    position: sticky;
+    top: 0;
     background-image: url("@site/static/img/sea.jpeg");
+    // background-image: url("@site/static/img/night.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    padding: 0;
     .container {
-        width: 100%;
-        height: 100%;
-        max-width: 100%;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        background-color: rgba(103, 103, 103, .2);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        color: pink;
-        text-shadow: 2px 2px 6px #444;
+        width: max-content;
+        color: deeppink;
         letter-spacing: 2px;
+        transition: all .5s ease-in-out;
         .hero__title {
-            font-size: 50px;
+            font-size: 70px;
+            font-family: 'Dancing Script';
+            font-weight: bold;
+            text-shadow: 6px 6px 14px pink;
         }
         .hero__subtitle {
-            font-size: 28px;
+            font-size: 36px;
+            font-weight: bold;
+            text-shadow: 4px 4px 10px pink;
+        }
+        &.small {
+            transform: scale(.6);
+        }
+        &.normal {
+            transform: scale(1);
         }
     }
 }
