--- a/src/components/HomepageFeatures/index.scss
+++ b/src/components/HomepageFeatures/index.scss
@@ -47,6 +47,7 @@
     .item {
         font-size: 22px;
         text-align: left;
+        text-shadow: 4px 4px 6px #fff;
         a {
             &:hover {
                 text-decoration: none;
